Add lombok logs